GNOME Bugzilla – Bug 659202
power: missing break
Last modified: 2011-09-16 07:58:53 UTC
case GSD_POWER_ACTION_SHUTDOWN: in gsd-power-manager.c:2048 is missing a break; If the fall through is intentional, there should be a comment saying so.
Good catch: commit e1e652972e9dc47839fd5f3cbfad3dfbeabc29c5 Author: Richard Hughes <richard@hughsie.com> Date: Fri Sep 16 08:58:11 2011 +0100 power: Don't fall through the switch statement when shutting down Resolves https://bugzilla.gnome.org/show_bug.cgi?id=659202