power: Don't fall through the switch statement when shutting down

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=659202